--- a/sass/base/_mixins.sass
+++ b/sass/base/_mixins.sass
@@ -26,9 +26,8 @@
     width: 505px
     height: 474px
     top: 27%
-    transform: translateY(-27%)
-    left: 50%
-    transform: translateX(-50%)
+    left: 37.5%
+    transform: translateX(-37.5%, -50%)
     z-index: -999999
 @mixin container()
 	max-width: 1216px
