--- a/sass/blocks/_footer.sass
+++ b/sass/blocks/_footer.sass
@@ -36,13 +36,15 @@
         padding-right: 27px
         margin-top: -30px
     &__phone
-        list-style-type: none
         padding: 10px 0 10px 0
         font-style: normal
         font-weight: bold
         font-size: 26px
         line-height: 33px
         color: #FFFFFF
+        list-style-type: none
+        outline: none
+        text-decoration: none
     &__wrap-ph
         display: flex
         flex-direction: column
@@ -70,7 +72,7 @@
     &__line
         display: flex
         align-items: center
-        width: 1920px
+        max-width: 1920px
         height: 90px
         background: #4A90C6
         z-index: 9999999999999
