--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,5 +1,6 @@
 // Подключения файлов из папки sass/base
 @import "base/base"
+@import "base/media"
 @import "base/mixins"
 
 // Подключение файлов из папки sass/blocks
