--- a/sass/blocks/_button.sass
+++ b/sass/blocks/_button.sass
@@ -95,3 +95,6 @@
 .questuons-form-button-form
     margin: 0 auto
     margin-top: 69px
+    width: 335px
+button.form-button-form
+    width: 250px
