--- a/sass/base/_media.sass
+++ b/sass/base/_media.sass
@@ -49,7 +49,7 @@
         height: 1300px
     h2.cert-title
         padding-top: 140px
-@media ( max-width: 1400px )
+@media ( max-width: 1600px )
     ul.nav__list a
         font-size: 17px
         padding-left: 40px
@@ -83,6 +83,36 @@
         height: 764px
     section.main
         height: 888px
+    div.coop__wrapper-left, div.coop__wrapper-right
+        margin: 0
+    div.coop__block-text-left, div.coop__block-text-right
+        margin: 0
+    img.coop__img
+        width: 420px
+        display: block
+        left: 37%
+        transform: translateX(-37px)
+        margin: 0 auto
+    img.coop__arrow
+        width: 192px
+        height: 182px
+        top: 177px
+        left: 43%
+    img.coop__colling
+        top: 117px
+    div.coop__block-text-left-v
+        padding: 35px 0 70px 0
+    div.coop__block-text-right-v
+        padding: 96px 0 51px 0
+    div.questions__form-wrapper
+        margin: 180px 0 0 0
+    div.cert__slider
+        width: 1400px
+    div.services__wrapper-right
+        width: 303px
+    img.services__img
+        left: 33.5%
+@media ( max-width: 1400px )
     // Заголовки
     h2.services-title
         font-size: 30px
@@ -122,29 +152,6 @@
     h2.coop-title
         font-size: 30px
         margin-top: 79px
-    // Сделать в более раннем разрешении
-    div.coop__wrapper-left, div.coop__wrapper-right
-        margin: 0
-    div.coop__block-text-left, div.coop__block-text-right
-        margin: 0
-    img.coop__img
-        width: 420px
-        display: block
-        left: 37%
-        transform: translateX(-37px)
-        margin: 0 auto
-    img.coop__arrow
-        width: 192px
-        height: 182px
-        top: 177px
-        left: 43%
-    img.coop__colling
-        top: 117px
-    div.coop__block-text-left-v
-        padding: 35px 0 70px 0
-    div.coop__block-text-right-v
-        padding: 96px 0 51px 0
-    // ------------------- 
     div.form__application
         font-size: 25px
     form.form__form input
@@ -181,7 +188,7 @@
         height: 950px
     div.cert__slider
         margin-top: 0
-    h2.job-title, h2.reviews-title
+    h2.job-title, h2.reviews-title, h2.questions-title
         font-size: 30px
     img.job__img
         width: 450px
@@ -194,3 +201,20 @@
         height: 750px
         margin-top: 100px
         padding-top: 70px
+    img.questions__img
+        width: 440px
+        height: 539px
+    div.questions__form-application
+        font-size: 28px
+        span
+            font-size: 16px
+    div.questions__name
+        font-size: 16px
+    input.questions__form-end
+        width: 300px
+        height: 63px
+        font-size: 16px
+    div.questions__form-wrapper
+        width: 415px
+    div.questions__wrapper-img-form
+        justify-content: space-between
