--- a/sass/base/_media.sass
+++ b/sass/base/_media.sass
@@ -218,3 +218,6 @@
         width: 415px
     div.questions__wrapper-img-form
         justify-content: space-between
+@media ( max-width: 1350px )
+    nav.nav
+        justify-content: space-between
