--- a/sass/base/_media.sass
+++ b/sass/base/_media.sass
@@ -220,4 +220,206 @@
         justify-content: space-between
 @media ( max-width: 1350px )
     nav.nav
-        justify-content: space-between
+        max-width: 100%
+        justify-content: center
+    div.services__block-text-right
+        width: none
+@media ( max-width: 1168px )
+    div.nav__wrapper-phone-column
+        padding: 0
+        padding-right: 5px 
+    a.nav__phone
+        font-size: 10px
+
+    ul.nav__list a
+        font-size: 15px
+        padding-left: 10px
+    img.nav__logo
+        width: 150px
+    div.services__block-text-right
+        width: 300px
+    img.services__img
+        display: none
+    img.cert__img
+        width: 500px
+        height: 350px
+    div.cert__slider
+        width: 740px
+    button.slick-next, button.slick-arrow
+        height: 50px
+    button.slick-prev
+        background-size: 22px
+        background-position-x: 17px
+    button.slick-next, .slick-arrow
+        background-size: 22px
+        background-position-x: 12px
+    ul.slick-dots li
+        width: 15px
+        height: 15px
+    section.cert
+        height: 600px
+    h2.cert-title
+        padding-top: 20px
+    div.services__wrapper-left
+        width: 500px
+    button.nav-button
+        width: 180px
+        margin-left: 20px
+    a.nav__phone
+        padding: 0
+    img.coop__img
+        width: 365px
+    img.coop__arrow
+        left: 41%
+    img.coop__colling
+        left: 71%
+    img.job__img
+        width: 400px
+        height: 400px
+    img.reviews__img
+        width: 550px
+        height: 370px
+    h2.footer-title
+        font-size: 30px
+    address, a.footer__phone, mail.footer__email-text
+        font-size: 20px
+    div.footer__wrapper-block
+        width: 470px
+@media ( max-width: 992px )
+    img.nav__logo
+        width: 90px
+    .nav
+        a.nav__phone
+            padding-left: 10px
+    h1.main-title
+        font-size: 20px
+        line-height: 38px
+    div.main-sub-title
+        font-size: 15px
+        line-height: 22px
+    div.main__text
+        font-size: 15px
+        line-height: 24px
+    img.main__tick
+        width: 40px
+        height: 40px
+    button.main-button
+        width: 216px
+        height: 61px
+        font-size: 13px
+        margin-top: 68px
+    img.main__sale-img
+        width: 170px
+        height: 142px
+        margin-top: 29px
+        margin-left: 53px
+    div.main__wrapper-all-elements
+        padding-top: 66px
+    img.main__background
+        height: 570px
+    section.main
+        height: 655px
+    h2.services-title
+        font-size: 20px
+    div.services-title-block
+        font-size: 16px
+    div.services__text
+        font-size: 13px
+        padding-top: 0
+    div.services__wrapper-all
+        margin-top: 0
+    div.services__wrapper-left
+        width: 258px
+    div.services-title-block
+        width: 200px
+        overflow-wrap: break-word
+    button.services-button
+        width: 200px
+        font-size: 10px
+        margin-top: 45px
+        height: 63px
+    section.services
+        height: 671px
+    div.services__block-text-right
+        height: 140px
+        margin-top: 18px
+    h2.company-title
+        font-size: 30px
+        padding-top: 20px
+    div.company__text
+        font-size: 40px
+        margin-top: -20px
+    div.company__subtext
+        font-size: 11px
+        margin-top: -27px
+        line-height: 16px
+    img.company__img
+        height: 47px
+        margin: 0
+    div.company__wrapper-all
+        margin-top: 0
+    div.company__wrapper-block
+        height: 70px
+    section.company
+        height: 284px
+    img.coop__img
+        width: 150px
+        height: 200px
+    h2.coop-title, h2.cert-title, h2.reviews-title
+        font-size: 25px
+    form.form__form
+        input
+            width: 200px
+            height: 54px
+        button
+            width: 197px
+            height: 55px
+            margin-top: 53px
+    div.form__application
+        font-size: 23px
+        margin-bottom: 45px
+    div.form
+        max-width: 630px
+    img.form__img-sale
+        width: 170px
+        height: 150px
+        margin: 25px 0 0 41px
+    div.form__wrapper
+        width: 302px
+    img.coop__img, img.coop__colling, img.coop__arrow
+        display: none
+    img.job__img
+        display: none
+    div.job__wrapper-down
+        margin: 40px 0 0 0
+    div.job__wrapper-all
+        margin-top: 0
+    h2.job-title
+        margin-top: 50px
+    section.job
+        height: 740px
+    h2.questions-title
+        font-size: 25px
+        margin-top: 50px
+    img.questions__img
+        width: 250px
+        height: 354px
+    div.questions__form-application
+        font-size: 19px
+        span
+            font-size: 12px
+    form.questions__form
+        input
+            width: 200px
+    div.questions__wrapper-img-form
+        height: 550px
+        button
+            width: 200px
+            height: 59px
+            margin-top: 20px
+            font-size: 16px
+    section.questions
+        height: 750px
+    img.footer__logo
+        width: 207px
+        padding-right: 41px
