--- a/sass/base/_media.sass
+++ b/sass/base/_media.sass
@@ -383,7 +383,7 @@
     img.form__img-sale
         width: 170px
         height: 150px
-        margin: 25px 0 0 41px
+        margin: 60px 0 0 41px
     div.form__wrapper
         width: 302px
     img.coop__img, img.coop__colling, img.coop__arrow
@@ -423,3 +423,189 @@
     img.footer__logo
         width: 207px
         padding-right: 41px
+@media ( max-width: 740px )
+    ul.nav__list
+        a
+            font-size: 10px
+    img.nav__logo
+        width: 78px
+    .nav
+        a.nav__phone
+            padding-left: 5px
+            padding-right: 5px
+            font-size: 8px
+    button.nav-button
+        width: 120px
+        height: 39px
+        margin-left: 10px
+        font-size: 11px
+    h1.main-title
+        font-size: 14px
+        line-height: 24px
+    div.main-sub-title
+        font-size: 10px
+        line-height: 17px
+    div.main__text
+        font-size: 11px
+        line-height: 17px
+    img.main__tick
+        width: 25px
+        height: 25px
+        margin-top: -31px
+    button.main-button
+        width: 127px
+        height: 37px
+        font-size: 9px
+        margin-top: 44px
+    img.main__sale-img
+        width: 117px
+        height: 100px
+        margin-top: 13px
+    div.main__wrapper-all-elements
+        padding-top: 40px
+    div.main__wrapper-text-left
+        margin-right: 68px
+    img.main__background
+        height: 396px
+    div.main__wrapper-all
+        padding-top: 41px
+    section.main
+        height: 480px
+    div.services__block-text-left
+        width: 180px
+    div.services__wrapper-left
+        margin-left: 80px
+        width: 163px
+    div.services__block-text-right
+        width: 180px
+    div.services__wrapper-right
+        width: 255px
+    div.services__wrapper-all
+        justify-content: space-between
+    button.services-button
+        width: 170px
+        font-size: 8px
+        height: 53px
+    h2.company-title
+        font-size: 22px
+    div.company__text
+        font-size: 30px
+    div.company__subtext
+        font-size: 9px
+        margin-top: -31px
+    img.company__img
+        height: 37px
+        margin-top: 13px
+    section.company
+        height: 247px
+    h2.coop-title
+        font-size: 20px
+        margin-top: 35px
+    div.coop-title-block
+        font-size: 13px
+    div.coop__text
+        font-size: 10px
+    div.coop__wrapper-left, div.coop__wrapper-right, div.coop-title-block, div.coop__text
+        width: 200px
+    div.coop__wrapper-all
+        justify-content: center
+        margin-top: 0
+    section.coop
+        height: 1400px
+    div.form__application
+        font-size: 20px
+    form.form__form
+        input
+            font-size: 13px
+    div.form__wrapper
+        width: 260px
+    img.cert__img
+        width: 350px
+        height: 270px
+        margin-top: 10px
+    div.cert__slider
+        width: 500px
+    button.slick-next, button.slick-arrow
+        height: 35px
+    button.slick-prev
+        background-size: 12px
+        background-position-x: 13px
+        margin-top: 55px
+    button.slick-next, .slick-arrow
+        background-size: 12px
+        background-position-x: 12px
+        margin-top: 55px
+    ul.slick-dots li
+        width: 12px
+        height: 12px
+    ul.slick-dots
+        bottom: -50px
+    h2.cert-title
+        font-size: 20px
+    section.cert
+        height: 440px
+    button.slick-next, button.slick-arrow
+        &:hover
+            background: none
+    button.slick-prev, button.slick-next
+        &:hover
+        pointer-events: none
+    img.reviews__img
+        width: 355px
+        height: 249px
+    h2.job-title
+        font-size: 20px
+    div.job-title-block
+        font-size: 16px
+        margin-top: 10px
+    div.job__text
+        font-size: 12px
+        padding-top: 9px
+    div.coop__block-text-right
+        width: 271px
+    section.job
+        height: 590px
+    h2.reviews-title
+        font-size: 20px
+    section.reviews
+        height: 467px
+        padding-top: 43px
+    img.questions__img
+        display: none
+    div.questions__wrapper-img-form
+        display: flex
+        justify-content: center
+    h2.footer-title
+        font-size: 15px
+    address, a.footer__phone, mail.footer__email-text
+        font-size: 12px
+    div.footer__wrapper-block
+        width: 338px
+    div.footer__wrap-ph
+        a
+            padding: 0
+    img.footer__logo
+        width: 152px
+        padding-right: 48px
+    div.footer__text-logo
+        font-size: 13px
+    img.footer__logo-2020
+        padding-left: 20px
+    form.forms, form.forms-application
+        width: 406px
+        height: 300px
+        padding: 30px
+        input
+            width: 300px
+            font-size: 15px
+            display: flex
+            justify-content: center
+        button
+            width: 220px
+            height: 56px
+            font-size: 16px
+    div.modal-forms__title
+        font-size: 18px
+        line-height: 25px
+        margin-bottom: 0
+        
