--- a/sass/base/_media.sass
+++ b/sass/base/_media.sass
@@ -113,6 +113,17 @@
     img.services__img
         left: 33.5%
 @media ( max-width: 1400px )
+    div.reviews__wrapper
+        div.cert__slider
+            button
+                background-size: 24px
+                background-position-x: 12px
+    button.slick-next:hover
+        background-size: 21px
+        background-position-x: 12px
+    button.slick-prev:hover
+            background-size: 21px
+            background-position-x: 19px
     // Заголовки
     h2.services-title
         font-size: 30px
@@ -286,6 +297,17 @@
     div.footer__wrapper-block
         width: 470px
 @media ( max-width: 992px )
+    section.cert
+        div.container
+            div.cert__slider
+                .slick-next:hover
+
+                button
+                    visibility: hidden
+    div.reviews__wrapper 
+        div.cert__slider
+            button
+                visibility: hidden
     img.nav__logo
         width: 90px
     .nav
@@ -608,4 +630,245 @@
         font-size: 18px
         line-height: 25px
         margin-bottom: 0
+@media ( max-width: 550px )
+    ul.nav__list
+        padding-left: 2px
+        a
+            padding-left: 5px
+            font-size: 7px
+    img.nav__logo
+        width: 40px
+    .nav
+        a.nav__phone
+            padding: -10px 2px 0 2px
+            font-size: 6px
+    button.nav-button
+        width: 57px
+        height: 25px
+        margin-left: 2px
+        font-size: 5px
+    h1.main-title
+        font-size: 10px
+        line-height: 18px
+    div.main-sub-title
+        font-size: 8px
+        line-height: 13px
+    div.main__text
+        font-size: 8px
+        line-height: 13px
+    img.main__tick
+        width: 20px
+        height: 20px
+        margin-top: -20px
+    button.main-button
+        width: 90px
+        height: 27px
+        font-size: 8px
+        margin-top: 34px
+    img.main__sale-img
+        width: 80px
+        height: 70px
+        margin-top: 10px
+    div.main__wrapper-text-left
+        margin-right: 55px
+    img.main__background
+        height: 296px
+    div.main__wrapper-all
+        padding-top: 31px
+    section.main
+        height: 380px
+    div.services__block-text-left
+        width: 120px
+    div.services__wrapper-left
+        margin-left: 36px
+        width: 143px
+    div.services__block-text-right
+        margin-top: 0
+        width: 110px
+        padding-top: 50px
+        &:nth-child(1)
+            padding-top: 0
+        &:nth-child(2)
+            padding-top: 40px
+        &:nth-child(3)
+            padding-top: 70px
+    div.services__wrapper-right
+        width: 105px
+    div.services-title-block
+        font-size: 7px
+    div.services__text
+        font-size: 7px
         
+    div.services-title-block
+        width: 100px
+    button.services-button
+        width: 150px
+        height: 45px
+    section.company
+        margin-top: 50px
+    div.company__text
+        font-size: 17px
+    div.company__wrapper-all
+        margin: 0 20px 0 20px
+    div.company__subtext
+        font-size: 5px
+        margin-top: -43px
+        line-height: 9px
+    h2.company-title
+        font-size: 13px
+        height: 60px
+    section.company
+        height: 180px
+    h2.services-title, h2.coop-title
+        font-size: 11px
+    div.coop__wrapper-left, div.coop__wrapper-right, div.coop-title-block, div.coop__text
+        width: 150px
+    div.coop-title-block
+        font-size: 8px
+    div.coop__text
+        font-size: 8px
+        padding-top: 0
+    div.form
+        max-width: 150px
+    img.form__img-sale
+        display: none
+    form.form__form
+        button
+            margin-top: 20px
+    div.form__wrapper
+        div.form__application
+            margin-bottom: 20px
+    div.form
+        margin-top: 50px
+    section.coop
+        height: 1190px
+    div.coop__block-text-right-v
+        margin-top: -5px
+    div.form__application
+        font-size: 13px
+    form.form__form
+        input
+            width: 200px
+            height: 50px
+            font-size: 10px
+        button
+            font-size: 15px
+    img.cert__img
+        width: 180px
+        height: 150px
+    div.cert__slider
+        width: 320px
+    button.slick-next, button.slick-arrow
+        height: 30px
+        margin-top: 0
+    button.slick-prev
+        z-index: 999999
+        background-size: 11px
+        background-position-x: 10px
+        display: none
+    button.slick-next, .slick-arrow
+        z-index: 999999
+        display: none
+        background-size: 11px
+        background-position-x: 8px
+    ul.slick-dots li
+        width: 10px
+        height: 10px
+    section.cert
+        height: 311px
+    h2.cert-title
+        font-size: 14px
+    h2.job-title
+        font-size: 13px
+    div.job-title-block
+        font-size: 10px
+        margin-top: 5px
+    div.job__text
+        font-size: 8px
+        padding-top: 0
+    .job__wrapper-left, .job .job__wrapper-right, .job .job__wrapper-center, .job .job__wrapper-left-2, .job .job__wrapper-right-2
+        width: 320px
+    section.job
+        div.job__wrapper-center
+            width: 320px
+    h2.reviews-title
+        font-size: 11px
+    img.reviews__img
+        width: 200px
+        height: 108px
+    section.reviews
+        height: 280px
+        padding-top: 27px
+    div.coop__block-text-right
+        width: 220px
+    section.cert
+        div.container
+            div.cert__slider
+                button
+                    visibility: hidden
+    div.reviews__wrapper 
+        div.cert__slider
+            button
+                visibility: hidden
+    div.coop__block-text-right
+        width: 130px
+    div.coop__block-text-left
+        width: 294px
+    div.coop__block-text-left-v
+        width: 314px
+    img.company__img
+        width: 50px
+    div.questions__form
+        width: 0
+    div.questions__form-wrapper
+        width: 320px
+        padding: 0
+    div.questions__wrapper-img-form
+        width: 0
+    div.footer__wrapper-block
+        width: 100px
+        padding: 0
+    h2.footer-title
+        font-size: 9px
+        line-height: 19px
+        padding-top: 20px
+    footer.footer
+        img
+            padding-right: 0
+    address
+        font-size: 8px
+        padding-left: 5px
+    div.footer__wrap-ph
+        a
+            font-size: 8px
+            padding-left: 5px
+    mail.footer__email-text
+        font-size: 8px
+        padding-left: 5px
+    img.footer__geo, img.footer__phone-img, img.footer__email-img
+        display: none
+    img.footer__social-icons
+        margin: 10px
+        width: 20px
+        height: 20px
+    a.up
+        width: 40px
+        height: 40px
+        right: 20px
+        bottom: 30px
+        img
+            width: 20px
+            background-size: 5px
+    #map, div.footer__wrapper-block
+        height: 500px
+    div.footer__wrapper-phone, div.footer__wrapper-email
+        margin-top: 0
+    div.footer__text-logo
+        font-size: 8px
+    img.footer__logo-2020
+        width: 35px
+    div.footer__line
+        height: 50px
+    img.footer__logo
+        width: 90px
+        padding-left: 13px
