Переделал множество элементов

--- a/sass/blocks/_button.sass
+++ b/sass/blocks/_button.sass
@@ -96,5 +96,10 @@
     margin: 0 auto
     margin-top: 69px
     width: 335px
-button.form-button-form
-    width: 250px
+#form-2
+    button
+        width: 350px
+        height: 73px
+        margin: 0 auto
+        margin-top: 49px
+        margin-bottom: 70px
