--- a/sass/blocks/_job.sass
+++ b/sass/blocks/_job.sass
@@ -33,3 +33,31 @@
         left: 50%
         transform: translateX(-50%)
         margin-top: 140px
+    &__numbers, .job__numbers-2, .job__numbers-3, .job__numbers-4, .job__numbers-5
+        font-family: Montserrat
+        font-style: normal
+        font-weight: bold
+        font-size: 90px
+        line-height: 110px
+        text-align: center
+        text-transform: uppercase
+        color: #F6F6F6
+        position: absolute
+        z-index: -9999
+    &__wrapper-left-2, .job__wrapper-left, .job__wrapper-left, .job__wrapper-right-2, .job__wrapper-center
+        position: relative
+    &__numbers
+        top: -48px
+        left: 67px
+    &__numbers-2
+        top: -46px
+        left: 50px
+    &__numbers-3
+        top: -72px
+        left: -15px
+    &__numbers-4
+        top: -50px
+        left: 5px
+    &__numbers-5
+        top: -45px
+        left: 27px
