--- a/sass/blocks/_nav.sass
+++ b/sass/blocks/_nav.sass
@@ -36,6 +36,8 @@
         padding-left: 78px
     li
         color: #333333
+        &:hover
+            color: #0065B1
     // Стилизация телефонов в навигационном меню
     &__wrapper-phone
         display: flex
