--- a/sass/blocks/_reviews.sass
+++ b/sass/blocks/_reviews.sass
@@ -12,10 +12,51 @@
     position: relative
     font-size: 26px
     &__img
-        display: block
-        margin: 0 auto
+        display: flex
+        max-width: 1035px
+        height: 500px
+        background: #FFFFFF
+        border-radius: 15px
+        margin-top: 123px
     &__wrapper
         margin-top: 40px
+    &__wrapper-av
+        display: flex
+    &__elem, .reviews__elem2, .reviews__elem3, .reviews__elem4, .reviews__elem5
+        margin-left: 300px
+        text-align: left
+        width: 300px
+        margin-top: 39px
+    &__avatar
+        position: absolute
+        margin: 82px 57px 0 83px
+    &__tran
+    &__too
+        font-family: Mont-bold
+        font-style: normal
+        font-weight: bold
+        font-size: 36px
+        line-height: 46px
+        color: #000000
+        margin-top: 24px
+    &__post
+        font-family: Mont-Bold
+        font-style: normal
+        font-weight: bold
+        font-size: 20px
+        line-height: 22px
+        color: #586EAE
+        margin-top: 10px
+        text-align: left
+        font-weight: 400
+    &__text
+        font-family: Mont-ExtraLight
+        font-style: normal
+        font-weight: 300
+        font-size: 18px
+        line-height: 30px
+        color: #1B1918
+        margin-top: 24px
 .slick-dots
     display: flex
     justify-content: center
