--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,3 +1,19 @@
+// Подключение шрифтов Mont, остальные шрифты установленны удалённо
+@font-face
+    font-family: Mont-Bold
+    src: url('../fonts/Mont-Bold.ttf')
+@font-face
+    font-family: Mont-ExtraLight
+    src: url('../fonts/Mont-ExtraLight.ttf')
+@font-face
+    font-family: Mont-Light
+    src: url('../fonts/Mont-Light.ttf')
+@font-face
+    font-family: Mont-Regular
+    src: url('../fonts/Mont-Regular.ttf')
+@font-face
+    font-family: Mont-SemiBold
+    src: url('../fonts/Mont-SemiBold.ttf')
 // Подключения файлов из папки sass/base
 @import "base/base"
 @import "base/media"
