--- a/sass/blocks/_coop.sass
+++ b/sass/blocks/_coop.sass
@@ -29,7 +29,13 @@
         max-width: 478px
         height: 700px
         top: 17%
-        z-index: 10
+    &__circle-img
+        @include img
+        width: 918px
+        height: 918px
+        left: 504px
+        top: 3034px
+        top: 10%
     &__block-text-left-v
         padding: 70px 0 116px 0
         width: 395px
