--- a/sass/blocks/_slider.sass
+++ b/sass/blocks/_slider.sass
@@ -2,7 +2,7 @@
     background: url('../img/background/Mask Group.png') center (center/cover) no-repeat
     background-color: rgba(21, 79, 155, 0.69)
     background-blend-mode: overlay
-    height: 1400px
+    height: 1010px
     width: 100%
     position: relative
     &__slider, .reviews__slider
@@ -12,7 +12,6 @@
         position: absolute
         left: 50%
         transform: translateX(-50%)
-        margin-top: 73px
         div
             outline: none
             width: 1207px
@@ -20,13 +19,12 @@
         display: block
         margin: 0 auto
         margin-top: 50px
-        width: 1057px
-        height: 756px
+        width: 765px
+        height: 555px
         border-radius: 20px
 .slick-prev, .slick-arrow
-    margin: 0 20px 0 20px
     border: none
-    width: 101px
+    width: 125px
     height: 101px
     border: 1px solid #FFFFFF
     border-radius: 100%
@@ -34,6 +32,8 @@
     cursor: pointer
     outline: none
     font-size: 0
+    align-items: center
+    margin-top: 100px
     &:hover
         background-color: #FFFFFF
     
@@ -41,11 +41,13 @@
     background: url('../icons/arrow-left.png') center (center/cover) no-repeat
     background-size: 45px
     background-position-x: 32px
+    margin-right: 30px
     &:hover
         background: url('../icons/arrow-left-c.png') center (center/cover) no-repeat
         background-size: 45px
         background-position-x: 32px
 .slick-next
+    margin-left: 30px
     background: url('../icons/arrow-right.png') center (center/cover) no-repeat
     background-size: 45px
     background-position-x: 22px
@@ -79,3 +81,9 @@
     transition: 0.4s
     &:hover
         background-color: #FFFFFF
+.container-c
+	display: block
+	max-width: 1216px
+	margin: 0 auto
+div.cert__slider
+    width: 1210px
