--- a/sass/blocks/_coop.sass
+++ b/sass/blocks/_coop.sass
@@ -29,6 +29,7 @@
         max-width: 478px
         height: 700px
         top: 17%
+        z-index: 999
     &__circle-img
         @include img
         width: 918px
