--- a/sass/blocks/_coop.sass
+++ b/sass/blocks/_coop.sass
@@ -92,3 +92,68 @@
      -moz-transform: rotate(10deg)
      -o-transform: rotate(10deg)
      -ms-transform: rotate(10deg)
+@media ( max-width: 1880px )
+    img.coop__circle-img
+        left: 484px
+@media ( max-width: 1800px )
+    img.coop__circle-img
+        left: 445px
+@media ( max-width: 1750px )
+    img.coop__circle-img
+        left: 426px
+@media ( max-width: 1700px )
+    img.coop__circle-img
+        top: 8%
+        left: 402px
+@media ( max-width: 1650px )
+    img.coop__circle-img
+        left: 379px
+@media ( max-width: 1601px )
+    img.coop__circle-img
+        left: 357px
+@media ( max-width: 1600px )
+    img.coop__circle-img
+        left: 305px
+@media ( max-width: 1550px )
+    img.coop__circle-img
+        left: 288px
+@media ( max-width: 1500px )
+    img.coop__circle-img
+        left: 268px
+@media ( max-width: 1450px )
+    img.coop__circle-img
+        left: 246px
+@media ( max-width: 1400px )
+    img.coop__circle-img
+        left: 229px
+        top: 7%
+@media ( max-width: 1350px )
+    img.coop__circle-img
+        left: 215px
+@media ( max-width: 1300px )
+    img.coop__circle-img
+        left: 193px
+@media ( max-width: 1280px )
+    img.coop__circle-img
+        left: 176px
+@media ( max-width: 1253px )
+    img.coop__circle-img
+        left: 166px
+@media ( max-width: 1200px )
+    img.coop__circle-img
+        left: 153px
+@media ( max-width: 1150px )
+    img.coop__circle-img
+        left: 100px
+@media ( max-width: 1100px )
+    img.coop__circle-img
+        left: 87px
+@media ( max-width: 1050px )
+    img.coop__circle-img
+        left: 67px
+@media ( max-width: 1100px )
+    img.coop__circle-img
+        left: 46px
+@media ( max-width: 992px )
+    img.coop__circle-img
+        display: none
