--- a/sass/blocks/_job.sass
+++ b/sass/blocks/_job.sass
@@ -61,3 +61,101 @@
     &__numbers-5
         top: -45px
         left: 27px
+@media ( max-width: 1400px )
+    div.job__numbers
+        top: -43px
+        left: 90px
+    div.job__numbers-2
+        top: -41px
+        left: 76px
+    div.job__numbers-3
+        top: -65px
+        left: 26px
+    div.job__numbers-4
+        top: -43px
+        left: 43px
+    div.job__numbers-5
+        top: -42px
+        left: 63px
+    .job__numbers, .job .job__numbers-2, .job .job__numbers-3, .job .job__numbers-4, .job .job__numbers-5
+        font-size: 70px
+@media ( max-width: 1400px )
+    div.job__numbers
+        top: -47px
+        left: 114px
+    div.job__numbers-2
+        top: -45px
+        left: 103px
+    div.job__numbers-3
+        top: -56px
+        left: 64px
+    div.job__numbers-4
+        top: -47px
+        left: 77px
+    div.job__numbers-5
+        top: -44px
+        left: 90px
+    .job__numbers, .job .job__numbers-2, .job .job__numbers-3, .job .job__numbers-4, .job .job__numbers-5
+        font-size: 50px
+@media ( max-width: 600px )
+    div.job__numbers
+        left: 85px
+    div.job__numbers-2
+        left: 76px
+    div.job__numbers-3
+        left: 59px
+    div.job__numbers-4
+        left: 49px
+    div.job__numbers-5
+        left: 60px
+@media ( max-width: 550px )
+    div.job__numbers
+        left: 96px
+    div.job__numbers-2
+        left: 89px
+    div.job__numbers-3
+        top: -52px
+        left: 86px
+    div.job__numbers-4
+        left: 72px
+    div.job__numbers-5
+        left: 80px
+    .job__numbers, .job .job__numbers-2, .job .job__numbers-3, .job .job__numbers-4, .job .job__numbers-5
+        font-size: 33px
+@media ( max-width: 550px )
+    div.job__numbers
+        left: 83px
+    div.job__numbers-2
+        left: 76px
+    div.job__numbers-3
+        top: -50px
+    div.job__numbers-4
+        left: 60px
+    div.job__numbers-5
+        left: 67px
+@media ( max-width: 400px )
+    div.job__numbers
+        left: 58px
+    div.job__numbers-2
+        left: 52px
+    div.job__numbers-3
+        top: -50px
+        left: 86px
+    div.job__numbers-4
+        left: 35px
+    div.job__numbers-5
+        left: 42px
+@media ( max-width: 320px )
+    div.job__numbers
+        left: 39px
+    div.job__numbers-2
+        left: 31px
+    div.job__numbers-3
+        top: -50px
+        left: 83px
+    div.job__numbers-4
+        left: 15px
+    div.job__numbers-5
+        left: 22px
+    section.reviews
+        margin-top: 50px
