--- a/sass/blocks/_questions.sass
+++ b/sass/blocks/_questions.sass
@@ -81,7 +81,232 @@
 #hid
     position: absolute
     width: 850px
-    height: 900px
+    min-height: 900px
     overflow: hidden
     margin-bottom: 420px
     left: -20px
+@media ( max-width: 1900px )
+    #hid
+        left: -48px
+@media ( max-width: 1841px )
+    #hid
+        left: -89px
+@media ( max-width: 1756px )
+    #hid
+        width: 768px
+        left: -58px
+@media ( max-width: 1600px )
+    #hid
+        width: 841px
+        left: -58px
+        margin-bottom: 134px
+@media ( max-width: 1600px )
+    div.questions__form-wrapper
+        margin: 314px 0 0 92px
+    #hid
+        width: 683px
+@media ( max-width: 1500px )
+    div.questions__form-wrapper
+        margin: 314px 0 0 92px
+    #hid
+        width: 683px
+@media ( max-width: 1400px )
+    #hid
+        width: 615px
+        img
+            width: 654px
+    div.questions__form-wrapper
+        margin: 400px 0 0 -530px
+        height: 740px
+        #form-2
+            button
+                margin-bottom: 40px
+    img.questions__img
+        width: 550px
+        height: 700px
+        margin-top: 120px
+        margin-left: 50px
+    div.services-title-block, div.services__block-text-right, .services__text
+        width: 240px
+@media ( max-width: 1280px )
+    #hid
+        width: 531px
+        height: 100px
+        left: -58px
+        margin-bottom: 170px
+        img
+            width: 650px
+    div.questions__form-wrapper
+        height: 600px
+        width: 360px
+        margin: 382px 0 0 140px
+        #form-2
+            input
+                width: 274px
+                height: 45px
+                font-size: 14px
+            button
+                width: 249px
+                height: 68px
+                margin-top: 20px
+                margin-bottom: 20px
+                font-size: 19px
+    div.questions__wrapper-img-form
+        justify-content: start
+    div.questions__form-application
+        font-size: 23px
+        span
+            font-size: 12px
+    img.questions__img
+        margin-left: 88px
+        margin-top: 0
+    section.questions
+        height: 788px
+    div.services-title-block, .services__text, .services__block-text-right
+        width: 300px
+@media ( max-width: 1250px )
+    #hid
+        width: 580px
+        margin-bottom: 200px
+        img
+            margin-top: 80px
+            width: 600px
+    div.questions__form-wrapper
+        height: 600px
+        width: 360px
+        margin: 391px 0 0 140px
+    img.questions__img
+        height: 600px
+        width: 450px
+        margin-top: 70px
+@media ( max-width: 1170px )
+    #hid
+        width: 519px
+        height: 100px
+        left: -63px
+        margin-bottom: -115px
+        img
+            width: 500px
+    div.questions__form-wrapper
+        height: 500px
+        width: 280px
+        margin: 460px 0 0 100px
+        #form-2
+            input
+                width: 190px
+                height: 45px
+                font-size: 12px
+                margin-left: 0
+            button
+                width: 194px
+                height: 56px
+                margin-top: 10px
+                margin-bottom: 10px
+                font-size: 15px
+            div.questions__name
+                font-size: 14px
+    div.questions__form-application
+        padding-top: 20px
+        font-size: 18px
+        margin-bottom: 10px
+        line-height: 19px
+        span
+            padding-top: 10px
+            font-size: 11px
+            line-height: 16px
+    img.questions__img
+        width: 350px
+        height: 445px
+        margin-left: 86px
+    section.questions
+        height: 689px
+@media ( max-width: 992px )
+    #hid
+        width: 425px
+        height: 100px
+        left: -63px
+        margin-bottom: -300px
+        img
+            width: 400px
+    div.questions__form-wrapper
+        height: 350px
+        width: 230px
+        margin: 514px 0 0 92px
+        #form-2
+            input
+                width: 160px
+                height: 30px
+                font-size: 10px
+                margin-bottom: 10px
+            button
+                width: 162px
+                height: 45px
+                margin-top: 0
+                margin-bottom: 0
+                font-size: 11px
+            div.questions__name
+                font-size: 11px
+    div.questions__form-application
+        padding-top: 5px
+        font-size: 14px
+        margin-bottom: 5px
+        line-height: 12px
+        span
+            padding-top: 10px
+            font-size: 11px
+            line-height: 16px
+    img.questions__img
+        width: 200px
+        height: 300px
+    section.questions
+        height: 455px
+    div.questions__wrapper-img-form
+        height: 279px
+    h2.questions-title
+        font-size: 20px
+@media ( max-width: 737px )
+    #hid
+        left: -83px
+    div.questions__form-wrapper
+        margin: 514px 0 0 210px
+@media ( max-width: 550px )
+    #hid
+        width: 425px
+        height: 100px
+        left: -51px
+        margin-bottom: -465px
+        img
+            width: 270px
+    div.questions__form-wrapper
+        height: 250px
+        width: 150px
+        margin: 500px 0 0 71px
+        #form-2
+            input
+                width: 100px
+                height: 18px
+                font-size: 7px
+                margin-bottom: 5px
+            button
+                width: 100px
+                height: 30px
+                font-size: 8px
+            div.questions__name
+                font-size: 8px
+                padding-top: 10px
+    div.questions__form-application
+        padding-top: 0
+        font-size: 10px
+        margin-bottom: 0
+        line-height: 10px
+        span
+            padding-top: 5px
+            font-size: 6px
+            line-height: 10px
+    img.questions__img
+        width: 200px
+        height: 300px
+    section.questions
+        height: 350px
+    h2.questions-title
+        font-size: 16px
