--- a/sass/blocks/_questions.sass
+++ b/sass/blocks/_questions.sass
@@ -181,7 +181,7 @@
         margin-top: 70px
 @media ( max-width: 1170px )
     #hid
-        width: 519px
+        width: 570px
         height: 100px
         left: -63px
         margin-bottom: -115px
@@ -220,18 +220,22 @@
         margin-left: 86px
     section.questions
         height: 689px
+@media ( max-width: 1100px )
+    #hid
+        width: 560px
+        img: 466px
 @media ( max-width: 992px )
     #hid
-        width: 425px
+        width: 456px
         height: 100px
-        left: -63px
-        margin-bottom: -300px
+        left: -57px
+        margin-bottom: -129px
         img
             width: 400px
     div.questions__form-wrapper
         height: 350px
         width: 230px
-        margin: 514px 0 0 92px
+        margin: 514px 0 0 200px
         #form-2
             input
                 width: 160px
@@ -264,11 +268,30 @@
         height: 279px
     h2.questions-title
         font-size: 20px
-@media ( max-width: 737px )
-    #hid
-        left: -83px
+@media ( max-width: 884px )
     div.questions__form-wrapper
-        margin: 514px 0 0 210px
+        margin: 514px 0 0 142px
+@media ( max-width: 822px )
+    #hid
+        width: 425px
+        height: 100px
+        left: -63px
+        margin-bottom: -149px
+        img
+            width: 400px
+    div.questions__form-wrapper
+        height: 350px
+        width: 230px
+        margin: 514px 0 0 92px
+@media ( max-width: 740px )
+    div.questions__form-wrapper
+        margin: 514px 0 0 336px
+@media ( max-width: 700px )
+    div.questions__form-wrapper
+        margin: 514px 0 0 239px
+@media ( max-width: 600px )
+    div.questions__form-wrapper
+        margin: 514px 0 0 194px
 @media ( max-width: 550px )
     #hid
         width: 425px
@@ -278,35 +301,43 @@
         img
             width: 270px
     div.questions__form-wrapper
-        height: 250px
-        width: 150px
-        margin: 500px 0 0 71px
+        height: 300px
+        width: 174px
+        margin: 556px 0 0 173px
         #form-2
             input
-                width: 100px
-                height: 18px
-                font-size: 7px
-                margin-bottom: 5px
+                width: 130px
+                height: 27px
+                font-size: 9px
+                margin-bottom: 10px
             button
-                width: 100px
-                height: 30px
-                font-size: 8px
+                width: 127px
+                height: 36px
+                font-size: 10px
             div.questions__name
                 font-size: 8px
                 padding-top: 10px
     div.questions__form-application
-        padding-top: 0
-        font-size: 10px
-        margin-bottom: 0
+        font-size: 12px
+        margin-bottom: 10px
         line-height: 10px
         span
-            padding-top: 5px
-            font-size: 6px
-            line-height: 10px
+            font-size: 7px
     img.questions__img
         width: 200px
         height: 300px
+        margin-left: 500px
+@media ( max-width: 349px )
+    #hid
+        width: 425px
+        height: 100px
+        left: -61px
+        margin-bottom: -389px
+        img
+            width: 270px
+    div.questions__form-wrapper
+        height: 300px
+        width: 174px
+        margin: 449px 0 0 96px
     section.questions
-        height: 350px
-    h2.questions-title
-        font-size: 16px
+        height: 360px
