--- a/sass/blocks/_reviews.sass
+++ b/sass/blocks/_reviews.sass
@@ -11,6 +11,8 @@
     justify-content: center
     position: relative
     font-size: 26px
+    min-height: 100%
+    background-attachment: fixed
     &__img
         display: flex
         max-width: 1035px
