--- a/sass/blocks/_slider.sass
+++ b/sass/blocks/_slider.sass
@@ -3,6 +3,8 @@
     background-color: rgba(21, 79, 155, 0.69)
     background-blend-mode: overlay
     height: 1010px
+    min-height: 100%
+    background-attachment: fixed
     width: 100%
     position: relative
     &__slider, .reviews__slider
