--- a/sass/blocks/_company.sass
+++ b/sass/blocks/_company.sass
@@ -2,6 +2,7 @@
     background: url('../img/background/Mask-Group.png') center (center/cover) no-repeat
     background-color: rgba(55, 102, 163, 0.99)
     background-blend-mode: overlay
+    height: 529px
     min-height: 100%
     background-attachment: fixed
     margin-top: 135px
